crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Project {
        project_id: ProjectId(
            "backend",
        ),
        name: Some(
            "Backend",
        ),
        description: None,
        owner: Some(
            UserId(
                "alice",
            ),
        ),
    },
)
