crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: ProjectId(
            "backend",
        ),
        title: "Bug fix",
        kind: Bug,
        description: None,
        priority: Some(
            High,
        ),
        assignee: Some(
            UserId(
                "alice",
            ),
        ),
    },
)
