crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "assignee",
                op: Equal,
                value: String(
                    "alice",
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
