crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-5.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Assign(
    AssignStatement {
        issue_id: IssueId(
            "backend#1",
        ),
        assignee: UserId(
            "alice",
        ),
    },
)
