crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-6.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Comment(
    CommentStatement {
        issue_id: IssueId(
            "backend#1",
        ),
        content: "Working on it",
    },
)
