crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-7.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#1",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "status",
                value: String(
                    "in-progress",
                ),
            },
        ],
    },
)
