crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow-8.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "backend#1",
        ),
        reason: Some(
            Done,
        ),
    },
)
