crates/iql-parser/src/snapshots/issuecraft_ql__tests__integration_workflow.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    User {
        username: "alice",
        email: Some(
            "alice@test.com",
        ),
        name: Some(
            "Alice",
        ),
    },
)
