crates/iql-parser/src/snapshots/issuecraft_ql__tests__issue_id_variations-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "my-project#123",
        ),
        reason: None,
    },
)
