crates/iql-parser/src/snapshots/issuecraft_ql__tests__issue_id_variations-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "backend_api#456",
        ),
        reason: None,
    },
)
