crates/iql-parser/src/snapshots/issuecraft_ql__tests__issue_id_variations.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "a#1",
        ),
        reason: None,
    },
)
